--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -960,14 +960,13 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The final model is chosen to be Logistic Regression. Logistic regression uses and updates weights as well as a classification function, which is commonly a sigmoid function, to learn. The sigmoid function is a mathematical formula for converting anticipated values into probabilities.\n",
+    "The final model is chosen to be Logistic Regression. It is a statistical mathematical model for predicting the probability of an event occurring given some prior knowledge.A logistic function is used in logistic regression to find a model that matches the data points. It can be an alternative for the linear regression.\n",
     "\n",
     "**Steps of Logistic Regression**\n",
-    "- Data Pre-processing through multiplying featurs with weights and adding them together\n",
-    "- Sigmoid function is to be applied on the result for previous step\n",
-    "- The result of the function is to checked, if it is large enough the classifier would classify it to a label.\n",
-    "- Weights are to be updated during training using a feedback from the comparison of predictions and true labels.\n",
-    "- To obtain the final prediction, it applies the weights, multiplication, summation, and hypothesis function to the testing data.\n"
+    "1. The model attempts to predict data by generating a linear – straight line – equation to model or predicting future data points.\n",
+    "2. The model employs test data to obtain the coefficients and the natural logarithm function to find the connection between the variables.\n",
+    "3. Using these coefficients in the logistic equation, the function can then predict future events.\n",
+    "4. To determine the probability, logistic regression employs the idea of odds ratios. This is defined as the ratio of the probability of an event occurrence vs the probability of it not occurring. For example a sports team's likelihood of winning a certain match, for example, may be 0.75. That team's chances of losing would be 1 – 0.75 = 0.25. That team's chances of winning are 0.75/0.25 = 3. This is because the team's chances of victory are 3 to 1.\n"
    ]
   },
   {
@@ -1294,17 +1293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['[NbConvertApp] Converting notebook finding_donors.ipynb to html',\n",
-       " '[NbConvertApp] Writing 502127 bytes to finding_donors.html']"
+       " '[NbConvertApp] Writing 502411 bytes to finding_donors.html']"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
